--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Index</h3>
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
-            <p><button id="beech">maple</button></p>
+            <p><button id="maple">maple</button></p>
 
         </div>
         <div class="content">
