--- a/maple_summary.html
+++ b/maple_summary.html
@@ -28,7 +28,7 @@
     <h3>Maple</h3>
     
     <p id="type"> Tree or shrub </p>
-    <img src="img/oak.jpg" style="width: 200px;">
-    <p>Family: Don't know
+    <img src="img/maple.jpg" style="width: 200px;">
+    <p>Family: Close Relatives to Horse Chestnuts
     </p> 
     
