--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h3>Index</h3>
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
+            <p><button id="redwood">Redwood</button></p>
 
         </div>
         <div class="content">
@@ -52,6 +53,10 @@
         $("#beech").click(function(){
             $("#i_content").attr("src","beech_content.html");
             $("#i_summary").attr("src","beech_summary.html");
+        })
+        $("#redwood").click(function(){
+            $("#i_content").attr("src","redwood_content.html");
+            $("#i_summary").attr("src","redwood_summary.html");
         })
 
         /* This will not be merged !  */
