--- a/oak_summary.html
+++ b/oak_summary.html
@@ -27,7 +27,7 @@ p{
 
 <h3>Oak</h3>
 
-<p id="type"> Tree or shrub </p>
+<p id="type"> Tree </p>
 <img src="img/oak.jpg" style="width: 200px;">
 <p>Family: genus Quercus of the beech family, Fagaceae.
 </p> 
